# gpu_burn

./: CMakeLists.txt  README.md
src/: clinfo.cpp  compare.cu  cudainfo.cpp
